Added repo link to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Postify
 site_url: https://gakiknadze.github.io/postify/
+repo_url: https://github.com/GAKiknadze/postify
 theme:
   name: material
